(lang dune 3.11)

(name starpath)

(generate_opam_files true)

(source
 (github mtoohey31/starpath))

(authors "Matthew Toohey <contact@mtoohey.com>")

(maintainers "Matthew Toohey <contact@mtoohey.com>")

; TODO: Finish filling this out.

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name starpath)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
